<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/bluef" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bluef"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerUpdateDevice"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/eNameDevice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:hint="@string/nameDevice" />

        <EditText
            android:id="@+id/eIpDevice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:hint="@string/ipDevice" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bluef"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/eSerialDevice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:hint="@string/serialnDevice" />

            <Button
                android:id="@+id/scanCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="launchScanner"
                android:text="@string/scanSerialNumber" />
        </LinearLayout>

        <EditText
            android:id="@+id/ePlaceDevice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:hint="@string/placeDevice" />

        <EditText
            android:id="@+id/eLastInventory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:hint="@string/lastInventory" />

        <TextView
            android:id="@+id/selectModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectModel"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinnerModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/device_arrays"
            android:prompt="@string/device_prompt" />

        <TextView
            android:id="@+id/selectStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectStatus"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinnerStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/status_array"
            android:prompt="@string/status_prompt" />

        <EditText
            android:id="@+id/eObservation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:hint="@string/observation"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLength="1000"
            android:maxLines="4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bluef"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/updateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/updateButton" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registerButton" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>